[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/terrain/trees/res/tree_oak.glb" type="PackedScene" id=1]
[ext_resource path="res://game/terrain/trees/tree_model.gd" type="Script" id=2]
[ext_resource path="res://game/terrain/trees/res/tree_simple.glb" type="PackedScene" id=3]
[ext_resource path="res://game/terrain/trees/res/tree_tall.glb" type="PackedScene" id=4]

[node name="TreeModel" type="Spatial"]
script = ExtResource( 2 )

[node name="tree_oak" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.5, 0, 0, 0, 2, 0, 0, 0, 1.5, 0, 0, 0 )
visible = false

[node name="tree_simple" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.5, 0, 0, 0, 2, 0, 0, 0, 1.5, 0, 0, 0 )
visible = false

[node name="tree_tall" parent="." instance=ExtResource( 4 )]
transform = Transform( 1.5, 0, 0, 0, 2, 0, 0, 0, 1.5, 0, 0, 0 )
visible = false
